--- a/index.html
+++ b/index.html
@@ -1,35 +1,16 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
- 
-    <title>Portfolio</title>
- </head>
- <body>
-    <h1>Hiranvika's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
-    <hr>
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie_review.png" height="200" alt="movie ranking project preview">
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday_img.png" height="200" alt="birthday invite project preview">
-    <hr>
-    <h5><a href="./public/about.html">About Me</a><br></h5>
-    <h5><a href="./public/contact.html">Contact Me</a></h5>
- </body>
- </html>
+<!-- Example image URL -->
+ <h1>It's My Birthday!</h1>
+ <h2>On the 21st November</h2>
+<img src="https://img1.picmix.com/o
+utput/pic/normal/8/7/1/4/9184178_68b0a.gif" alt="Birthday">
+<h3>What to bring:</h3>
+<ul>
+    <li>Baloons(I love decorations)</li>
+    <li>Gifts</li>
+    <li>Cake</li>
+    <li>Snacks</li>
+    <li>YOUUUUUUU</li>    
+</ul>    
+<h4>This is where you need to go:</h4>
+<!-- Example Google Maps Link -->
+<a href="https://maps.app.goo.gl/9PX9xzA9X8Vikyia8">Google maps link</a>
