--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!-- Example image URL -->
- <h1>It's My Birthday!</h1>
- <h2>On the 21st November</h2>
-<img src="https://img1.picmix.com/o
-utput/pic/normal/8/7/1/4/9184178_68b0a.gif" alt="Birthday">
-<h3>What to bring:</h3>
-<ul>
-    <li>Baloons(I love decorations)</li>
-    <li>Gifts</li>
-    <li>Cake</li>
-    <li>Snacks</li>
-    <li>YOUUUUUUU</li>    
-</ul>    
-<h4>This is where you need to go:</h4>
-<!-- Example Google Maps Link -->
-<a href="https://maps.app.goo.gl/9PX9xzA9X8Vikyia8">Google maps link</a>
+<!-- Write your code below -->
+ <h1>The Best Movies According to Me</h1>
+ <h2>My list....</h2>
+ <hr />
+    <h3>1. Geetha Govindham</h3>
+    <p>One of the best entertainment movie.</p>
+    <h3>2. Ala Vaikunthapurramuloo</h3>
+    <p>One of the best family entertainer.</p>
+    <h3>3. F2</h3>
+    <p>One of the best comedy movie.</p>
+    <h3>4. Sita Ramam</h3>
+    <p>One of the best romantic movie.</p>
+    <h3>5. KGF</h3>
+    <p>One of the best action movie.My best..</p>
