--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
-<!-- Write your code below -->
- <h1>The Best Movies According to Me</h1>
- <h2>My list....</h2>
- <hr />
-    <h3>1. Geetha Govindham</h3>
-    <p>One of the best entertainment movie.</p>
-    <h3>2. Ala Vaikunthapurramuloo</h3>
-    <p>One of the best family entertainer.</p>
-    <h3>3. F2</h3>
-    <p>One of the best comedy movie.</p>
-    <h3>4. Sita Ramam</h3>
-    <p>One of the best romantic movie.</p>
-    <h3>5. KGF</h3>
-    <p>One of the best action movie.My best..</p>
+<!-- TODO 1: Create the HTML Boilerplate -->
+
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+ 
+    <title>Portfolio</title>
+ </head>
+ <body>
+    <h1>Hiranvika's Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr>
+    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/movie_review.png" height="200" alt="movie ranking project preview">
+    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
+    <img src="./assets/images/birthday_img.png" height="200" alt="birthday invite project preview">
+    <hr>
+    <h5><a href="./public/about.html">About Me</a><br></h5>
+    <h5><a href="./public/contact.html">Contact Me</a></h5>
+ </body>
+ </html>
