--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Hiranvika's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie_review.png" height="200" alt="movie ranking project preview">
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
+    <h3><a href="./3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday_img.png" height="200" alt="birthday invite project preview">
     <hr>
     <h5><a href="./public/about.html">About Me</a><br></h5>
